--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "~4.16.1",
     "font-awesome": "^4.7.0",
     "http-errors": "~1.6.3",
+    "jquery": "^3.7.1",
     "morgan": "~1.9.1",
     "pug": "2.0.0-beta11"
   }
