--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "font-awesome": "^4.7.0",
     "http-errors": "~1.6.3",
     "jquery": "^3.7.1",
+    "mongodb": "^6.10.0",
+    "mongoose": "^8.7.2",
     "morgan": "~1.9.1",
     "pug": "2.0.0-beta11"
   }
