--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mongodb": "^6.10.0",
     "mongoose": "^8.7.2",
     "morgan": "~1.9.1",
-    "pug": "2.0.0-beta11"
+    "pug": "2.0.0-beta11",
+    "request": "^2.88.2"
   }
 }
