--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mongodb": "^6.10.0",
     "mongoose": "^8.7.2",
     "morgan": "~1.9.1",
+    "passport": "^0.7.0",
     "pug": "2.0.0-beta11",
     "request": "^2.88.2"
   }
