--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
   },
   "dependencies": {
     "@angular/cli": "^19.0.4",
-    "bootstrap": "^3.3.7",
+    "bootstrap": "^5.3.3",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
-    "express": "~4.16.1",
+    "express": "^4.21.2",
     "font-awesome": "^4.7.0",
     "http-errors": "~1.6.3",
     "jquery": "^3.7.1",
@@ -18,7 +18,7 @@
     "mongoose": "^8.7.2",
     "morgan": "~1.9.1",
     "passport": "^0.7.0",
-    "pug": "2.0.0-beta11",
+    "pug": "^3.0.3",
     "request": "^2.88.2"
   }
 }
