--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "http-errors": "~1.6.3",
     "jquery": "^3.7.1",
     "mongodb": "^6.11.0",
-    "mongoose": "^8.7.2",
+    "mongoose": "^8.8.4",
     "morgan": "~1.9.1",
     "passport": "^0.7.0",
     "pug": "^3.0.3",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "tough-cookie": "^5.0.0"
   }
 }
