--- a/angularGameReview/package.json
+++ b/angularGameReview/package.json
@@ -20,9 +20,10 @@
     "@angular/router": "^19.0.0",
     "angular": "^1.2.32",
     "bootstrap": "^5.3.3",
+    "jQuery": "^1.7.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.15.0"
+    "zone.js": "^0.15.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^19.0.4",
