angular build does not work

--- a/angularGameReview/package.json
+++ b/angularGameReview/package.json
@@ -18,10 +18,9 @@
     "@angular/platform-browser": "^19.0.0",
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/router": "^19.0.0",
-    "angular": "^1.2.32",
     "bootstrap": "^5.3.3",
     "jQuery": "^1.7.4",
-    "rxjs": "~7.8.0",
+    "rxjs": "^7.8.1",
     "tslib": "^2.3.0",
     "zone.js": "^0.15.0"
   },
