--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "chai": "^5.1.2",
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
