--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@angular/cli": "^19.0.4",
     "body-parser": "^1.20.3",
     "bootstrap": "^5.3.3",
+    "bootswatch": "^5.3.7",
     "chai": "^5.1.2",
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.4",
@@ -18,19 +19,17 @@
     "express-session": "^1.18.1",
     "font-awesome": "^4.7.0",
     "http-errors": "~1.6.3",
-    "jade": "^1.11.0",
+    "jade": "^0.29.0",
     "jquery": "^3.7.1",
     "mocha": "^11.0.1",
     "mongodb": "^6.11.0",
     "mongoose": "^8.8.4",
-    "morgan": "~1.9.1",
+    "morgan": "^1.10.1",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0",
     "pug": "^3.0.3",
-    "request": "^2.88.2",
     "serve-favicon": "^2.5.0",
-    "should": "^13.2.3",
-    "tough-cookie": "^5.0.0"
+    "should": "^13.2.3"
   }
 }
